2010-10-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed error in Italian translation that caused HTML error and add workaround for future problems (Bug: 254863).

2010-10-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Freebase source for adapted /music/release schema.

2010-10-14  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source for new layout (Bug: 253549).

2010-10-13  Robby Stephenson  <robby@periapsis.org>

	* Added options in CSV importer and exporter for table delimiters.

2010-09-20  Robby Stephenson  <robby@periapsis.org>

	* Changed URL field output to truncate link text to 30 letters (Bug: 250880).

2010-09-12  Robby Stephenson  <robby@periapsis.org>

	* Increased max icon size to 256.

2010-09-11  Robby Stephenson  <robby@periapsis.org>

	* Changed updating match algorithm to try to improve results when having multiple good matches (Bug: 250886).

2010-09-10  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar plugin fetcher to use a separate thread.
	* Fixed crash with z39.50 fetcher (Bug: 250795).

2010-09-07  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar plugin fetcher to work with comic books.

2010-09-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing for director and writer in IMDB fetcher (Bug: 249096).

2010-09-02  Robby Stephenson  <robby@periapsis.org>

	* Updated DTD and added unit test for validation.

2010-08-29  Robby Stephenson  <robby@periapsis.org>

	* Added GCstar import/export for comic book collections.

2010-08-28  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with adding new fields during CSV import.

2010-08-25  Robby Stephenson  <robby@periapsis.org>

	* Added GCstar export for wine collections.
	* Improved GCstar import for wine collections.

2010-08-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed filter view to apply filter when item is selected (Bug: 248657).

2010-08-16  Robby Stephenson  <robby@periapsis.org>
